--- a/public/tournament.html
+++ b/public/tournament.html
@@ -47,7 +47,10 @@
       <li class="home-button-leaderboard"><a href="main.html"><i class="fas fa-home"></i></a></li>
     </ul>
     <div class="user-container">
-      <select id="user1Dropdown" class="form-control"></select>
+      <label for="user1Dropdown">Select User 1:</label>
+      <select id="user1Dropdown" class="form-control">
+        <option value="">Select User 1</option>
+      </select>
       <span id="user1GamesPlayed">0</span> games played
       <br>
       <span id="user1TotalScore">0</span> total score
@@ -58,7 +61,10 @@
       </div>
     </div>
     <div class="user-container">
-      <select id="user2Dropdown" class="form-control"></select>
+      <label for="user2Dropdown">Select User 2:</label>
+      <select id="user2Dropdown" class="form-control">
+        <option value="">Select User 2</option>
+      </select>
       <span id="user2GamesPlayed">0</span> games played
       <br>
       <span id="user2TotalScore">0</span> total score
@@ -75,122 +81,123 @@
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
-  <script src="script.js"></script>
   <script>
-  // Fetch random users from the server
-  function fetchRandomUsers() {
-    $.ajax({
-      url: '/.netlify/functions/random-users', // Ensure this endpoint is correct
-      method: 'GET',
-      success: function(data) {
-        console.log('Fetched data:', data); // Debugging line
-        populateDropdowns(data);
-      },
-      error: function(err) {
-        console.error('Error fetching random users:', err);
+    $(document).ready(function() {
+      // Fetch all users when the page loads
+      fetchAllUsers();
+
+      function fetchAllUsers() {
+        $.ajax({
+          url: '/.netlify/functions/get-users', // Ensure this endpoint is correct
+          method: 'GET',
+          success: function(data) {
+            console.log('Fetched users:', data); // Debugging line
+            populateDropdowns(data);
+          },
+          error: function(err) {
+            console.error('Error fetching users:', err);
+          }
+        });
       }
-    });
-  }
 
-  function populateDropdowns(data) {
-    let user1Dropdown = $('#user1Dropdown');
-    let user2Dropdown = $('#user2Dropdown');
-    user1Dropdown.empty();
-    user2Dropdown.empty();
+      function populateDropdowns(users) {
+        let user1Dropdown = $('#user1Dropdown');
+        let user2Dropdown = $('#user2Dropdown');
+        user1Dropdown.empty();
+        user2Dropdown.empty();
 
-    // Assuming data.user1 and data.user2 are user objects
-    if (data.user1) {
-      user1Dropdown.append(`<option value="${data.user1._id}">${data.user1.username}</option>`);
-    }
-    if (data.user2) {
-      user2Dropdown.append(`<option value="${data.user2._id}">${data.user2.username}</option>`);
-    }
-  }
+        user1Dropdown.append('<option value="">Select User 1</option>');
+        user2Dropdown.append('<option value="">Select User 2</option>');
 
-  $(document).ready(function() {
-    // Fetch random users when the page loads
-    fetchRandomUsers();
+        users.forEach(user => {
+          user1Dropdown.append(`<option value="${user._id}">${user.username}</option>`);
+          user2Dropdown.append(`<option value="${user._id}">${user.username}</option>`);
+        });
+      }
 
-    // Handle dropdown change
-    $('#user1Dropdown').change(function() {
-      const userId = $(this).val();
-      fetchUserDetails(userId, function(data) {
-        $('#user1GamesPlayed').text(data.numGamesPlayed || 0);
-        $('#user1TotalScore').text(data.totalTournamentScore || 0);
+      $('#user1Dropdown').change(function() {
+        const userId = $(this).val();
+        if (userId) {
+          fetchUserDetails(userId, function(data) {
+            $('#user1GamesPlayed').text(data.numGamesPlayed || 0);
+            $('#user1TotalScore').text(data.totalTournamentScore || 0);
+          });
+        }
       });
-    });
 
-    $('#user2Dropdown').change(function() {
-      const userId = $(this).val();
-      fetchUserDetails(userId, function(data) {
-        $('#user2GamesPlayed').text(data.numGamesPlayed || 0);
-        $('#user2TotalScore').text(data.totalTournamentScore || 0);
+      $('#user2Dropdown').change(function() {
+        const userId = $(this).val();
+        if (userId) {
+          fetchUserDetails(userId, function(data) {
+            $('#user2GamesPlayed').text(data.numGamesPlayed || 0);
+            $('#user2TotalScore').text(data.totalTournamentScore || 0);
+          });
+        }
       });
-    });
 
-    var user1Selection = '';
-    var user2Selection = '';
-
-    $('.buttons1 button').click(function() {
-      user1Selection = $(this).text();
-      checkSubmitVisibility();
-    });
-
-    $('.buttons2 button').click(function() {
-      user2Selection = $(this).text();
-      checkSubmitVisibility();
-    });
-
-    function checkSubmitVisibility() {
-      if (user1Selection !== '' && user2Selection !== '') {
-        $('#submitResult').show();
-      }
-    }
-
-    $('#submitResult').click(function() {
-      const user1Id = $('#user1Dropdown').val();
-      const user2Id = $('#user2Dropdown').val();
-
-      if (!user1Id || !user2Id) {
-        console.error('User IDs are missing');
-        return;
+      function fetchUserDetails(userId, callback) {
+        $.ajax({
+          url: `/.netlify/functions/username?id=${userId}`, // Ensure this endpoint is correct
+          method: 'GET',
+          success: function(data) {
+            callback(data);
+          },
+          error: function(err) {
+            console.error('Error fetching user details:', err);
+          }
+        });
       }
 
-      submitResult(user1Id, user1Selection, user2Id, user2Selection);
-    });
-  });
+      var user1Selection = '';
+      var user2Selection = '';
 
-  function fetchUserDetails(userId, callback) {
-    $.ajax({
-      url: `/.netlify/functions/username?id=${userId}`, // Ensure this endpoint is correct
-      method: 'GET',
-      success: function(data) {
-        callback(data);
-      },
-      error: function(err) {
-        console.error('Error fetching user details:', err);
+      $('.buttons1 button').click(function() {
+        user1Selection = $(this).text();
+        checkSubmitVisibility();
+      });
+
+      $('.buttons2 button').click(function() {
+        user2Selection = $(this).text();
+        checkSubmitVisibility();
+      });
+
+      function checkSubmitVisibility() {
+        if (user1Selection !== '' && user2Selection !== '') {
+          $('#submitResult').show();
+        }
+      }
+
+      $('#submitResult').click(function() {
+        const user1Id = $('#user1Dropdown').val();
+        const user2Id = $('#user2Dropdown').val();
+
+        if (!user1Id || !user2Id) {
+          console.error('User IDs are missing');
+          return;
+        }
+
+        submitResult(user1Id, user1Selection, user2Id, user2Selection);
+      });
+
+      function submitResult(user1Id, user1Result, user2Id, user2Result) {
+        $.ajax({
+          url: '/path/to/submitResult', // Replace with the actual URL or API endpoint
+          method: 'POST',
+          data: {
+            user1Id: user1Id,
+            user1Result: user1Result,
+            user2Id: user2Id,
+            user2Result: user2Result
+          },
+          success: function(response) {
+            console.log('Result submitted successfully:', response);
+          },
+          error: function(err) {
+            console.error('Error submitting result:', err);
+          }
+        });
       }
     });
-  }
-
-  function submitResult(user1Id, user1Result, user2Id, user2Result) {
-    $.ajax({
-      url: '/path/to/submitResult', // Replace with the actual URL or API endpoint
-      method: 'POST',
-      data: {
-        user1Id: user1Id,
-        user1Result: user1Result,
-        user2Id: user2Id,
-        user2Result: user2Result
-      },
-      success: function(response) {
-        console.log('Result submitted successfully:', response);
-      },
-      error: function(err) {
-        console.error('Error submitting result:', err);
-      }
-    });
-  }
-</script>
+  </script>
 </body>
 </html>
