--- a/public/tournament.html
+++ b/public/tournament.html
@@ -47,7 +47,7 @@
       <li class="home-button-leaderboard"><a href="main.html"><i class="fas fa-home"></i></a></li>
     </ul>
     <div class="user-container">
-      <label for="user1Dropdown">Select User 1:</label>
+      <label for="user1Dropdown">Select User 1 (White):</label>
       <select id="user1Dropdown" class="form-control">
         <option value="">Select User 1</option>
       </select>
@@ -61,7 +61,7 @@
       </div>
     </div>
     <div class="user-container">
-      <label for="user2Dropdown">Select User 2:</label>
+      <label for="user2Dropdown">Select User 2 (Black):</label>
       <select id="user2Dropdown" class="form-control">
         <option value="">Select User 2</option>
       </select>
