--- a/public/tournament.html
+++ b/public/tournament.html
@@ -34,14 +34,42 @@
       border-radius: 5px;
       text-align: center;
     }
+    #passwordScreen {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: #fff;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 1000;
+    }
+    #passwordScreen input {
+      font-size: 24px;
+      text-align: center;
+      width: 200px;
+      margin-right: 10px;
+    }
+    #passwordScreen button {
+      font-size: 24px;
+    }
+    .main-content {
+      display: none;
+    }
   </style>
 </head>
 <body>
-  <!-- Three.js Background Canvas -->
-  <div class="background-container">
-    <canvas id="backgroundCanvas"></canvas>
+  <div id="passwordScreen">
+    <div>
+      <h2>Enter 4-Digit Code</h2>
+      <input type="password" id="passwordInput" maxlength="4" />
+      <button id="submitPassword">Submit</button>
+      <p id="errorMessage" style="color: red; display: none;">Incorrect code. Please try again.</p>
+    </div>
   </div>
-  <div class="container">
+  <div class="container main-content">
     <h1 class="leaderboard-h1">Tournaments</h1>
     <ul class="navigation-links">
       <li class="home-button-leaderboard"><a href="main.html"><i class="fas fa-home"></i></a></li>
@@ -83,6 +111,29 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
   <script>
     $(document).ready(function() {
+      // Handle password protection
+      $('#submitPassword').click(function() {
+        const inputCode = $('#passwordInput').val();
+        $.ajax({
+          url: '/.netlify/functions/verify-password', // Your serverless function URL
+          method: 'POST',
+          contentType: 'application/json',
+          data: JSON.stringify({ code: inputCode }),
+          success: function(response) {
+            if (response.success) {
+              $('#passwordScreen').hide();
+              $('.main-content').show();
+              $('#errorMessage').hide();
+            } else {
+              $('#errorMessage').show();
+            }
+          },
+          error: function() {
+            $('#errorMessage').text('An error occurred. Please try again.').show();
+          }
+        });
+      });
+
       // Fetch all users when the page loads
       fetchAllUsers();
 
