--- a/public/tournament.html
+++ b/public/tournament.html
@@ -34,46 +34,14 @@
       border-radius: 5px;
       text-align: center;
     }
-    #passwordScreen {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: #fff;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      z-index: 1000;
-    }
-    #passwordScreen input {
-      font-size: 24px;
-      text-align: center;
-      width: 200px;
-      margin-right: 10px;
-    }
-    #passwordScreen button {
-      font-size: 24px;
-    }
-    .main-content {
-      display: none;
-    }
   </style>
 </head>
 <body>
-  <!-- Password protection UI (commented out) -->
-  <!--
-  <div id="passwordScreen">
-    <div>
-      <h2>Enter 4-Digit Code</h2>
-      <input type="password" id="passwordInput" maxlength="4" />
-      <button id="submitPassword">Submit</button>
-      <p id="errorMessage" style="color: red; display: none;">Incorrect code. Please try again.</p>
-    </div>
+  <!-- Three.js Background Canvas -->
+  <div class="background-container">
+    <canvas id="backgroundCanvas"></canvas>
   </div>
-  -->
-
-  <div class="container main-content">
+  <div class="container">
     <h1 class="leaderboard-h1">Tournaments</h1>
     <ul class="navigation-links">
       <li class="home-button-leaderboard"><a href="main.html"><i class="fas fa-home"></i></a></li>
