--- a/public/profile.html
+++ b/public/profile.html
@@ -62,7 +62,7 @@
     
     <!-- User Info -->
     <div class="profile-info text-center">
-      <h2 class="h2-user" style="color:white;">Welcome, <span id="username"></span>!</h2>
+      <!--<h2 class="h2-user" style="color:white;">Welcome, <span id="username"></span>!</h2>-->
       <p style="color:white;">Email: <span id="email"></span></p>
       <p style="color:white;">Number of Games Played: <span id="numGamesPlayed"></span></p>
       <p style="color:white;">Total Tournament Score: <span id="totalTournamentScore"></span></p>
