--- a/public/feedback.html
+++ b/public/feedback.html
@@ -8,6 +8,6 @@
 </head>
 <body>
   <!-- Redirecting to profile.html -->
-  <p>If you are not redirected automatically, <a href="profile.html">click here</a>.</p>
+  <p>If you are not redirected automatically, <a href="main.html">click here</a>.</p>
 </body>
 </html>
