--- a/public/feedback.html
+++ b/public/feedback.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Feedback</title>
-  <meta http-equiv="refresh" content="0; url=profile.html">
+  <meta http-equiv="refresh" content="0; url=main.html">
 </head>
 <body>
   <!-- Redirecting to profile.html -->
