--- a/public/main.html
+++ b/public/main.html
@@ -47,7 +47,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            position: absolute;
+            position: relative;
             bottom: 10px;
             width: 100%;
         }
