--- a/public/main.html
+++ b/public/main.html
@@ -100,7 +100,7 @@
                 <a href="archive.html"><i class="fas fa-book chess-piece"></i> Archives</a>
             </div>
             <div class="grid-item">
-                <a href="tournament.html"><i class="fas fa-trophy chess-piece"></i> Tournaments</a>
+                <a href="bracket/student.html"><i class="fas fa-trophy chess-piece"></i> Tournaments</a>
             </div>
             <div class="grid-item">
                 <a href="socials.html"><i class="fas fa-user-friends"></i> Socials</a>
