--- a/public/feedback.html
+++ b/public/feedback.html
@@ -3,11 +3,51 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Feedback</title>
-  <meta http-equiv="refresh" content="0; url=main.html">
+  <title>Submit Feedback</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- Redirecting to profile.html -->
-  <p>If you are not redirected automatically, <a href="main.html">click here</a>.</p>
+  <h1>Feedback</h1>
+  <form id="feedback-form">
+    <textarea id="feedback" placeholder="Enter your feedback here" required></textarea>
+    <button type="submit">Submit Feedback</button>
+  </form>
+
+  <div id="feedback-message"></div>
+
+  <script>
+    document.getElementById('feedback-form').addEventListener('submit', async function(event) {
+      event.preventDefault();
+      
+      const userId = localStorage.getItem('userId'); // Assuming userId is stored in localStorage
+      const feedback = document.getElementById('feedback').value;
+
+      if (!userId || !feedback) {
+        alert('Please fill out the feedback');
+        return;
+      }
+
+      try {
+        const response = await fetch('../netlify/functions/submitFeedback.js', {
+          method: 'POST',
+          body: JSON.stringify({ userId, feedback }),
+          headers: {
+            'Content-Type': 'application/json'
+          }
+        });
+
+        const result = await response.json();
+
+        if (response.ok) {
+          document.getElementById('feedback-message').textContent = 'Feedback submitted successfully!';
+        } else {
+          document.getElementById('feedback-message').textContent = `Error: ${result.error}`;
+        }
+      } catch (error) {
+        document.getElementById('feedback-message').textContent = 'Error submitting feedback.';
+        console.error('Error:', error);
+      }
+    });
+  </script>
 </body>
 </html>
