--- a/public/feedback.html
+++ b/public/feedback.html
@@ -8,27 +8,85 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link rel="stylesheet" href="style.css">
   <style>
-    .home-button-leaderboard{
+    body {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+      background-color: #f0f0f0;
+      font-family: Arial, sans-serif;
+    }
+
+    .feedback-container {
+      width: 80%;
+      max-width: 600px;
+      padding: 20px;
+      background-color: #ffffff;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      text-align: center;
+    }
+
+    textarea {
+      width: 100%;
+      height: 200px;
+      padding: 10px;
+      font-size: 16px;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+      margin-bottom: 10px;
+      box-sizing: border-box;
+    }
+
+    button {
+      padding: 10px 20px;
+      font-size: 16px;
+      color: #ffffff;
+      background-color: #007bff;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background-color: #0056b3;
+    }
+
+    .home-button-leaderboard {
       padding: 15px 30px;
       color: #FFDD00;
       background-color: #FFDD00;
       border: none;
       border-radius: 5px;
       text-align: center;
+      display: inline-block;
+    }
+
+    .home-button-leaderboard a {
+      text-decoration: none;
+      color: inherit;
+    }
+
+    #feedback-message {
+      margin-top: 10px;
+      font-size: 16px;
     }
   </style>
 </head>
 <body>
-  <h1>Feedback</h1>
-  <ul class="navigation-links">
-    <li class="home-button-leaderboard"><a href="main.html"><i class="fas fa-home"></i></a></li>
-  </ul>
-  <form id="feedback-form">
-    <textarea id="feedback" placeholder="Enter your feedback here" required></textarea>
-    <button type="submit">Submit Feedback</button>
-  </form>
+  <div class="feedback-container">
+    <h1>Feedback</h1>
+    <ul class="navigation-links">
+      <li class="home-button-leaderboard"><a href="main.html"><i class="fas fa-home"></i></a></li>
+    </ul>
+    <form id="feedback-form">
+      <textarea id="feedback" placeholder="Enter your feedback here" required></textarea>
+      <button type="submit">Submit Feedback</button>
+    </form>
 
-  <div id="feedback-message"></div>
+    <div id="feedback-message"></div>
+  </div>
 
   <script>
     document.getElementById('feedback-form').addEventListener('submit', async function(event) {
@@ -43,7 +101,7 @@
       }
 
       try {
-        const response = await fetch('../netlify/functions/submitFeedback.js', {
+        const response = await fetch('/.netlify/functions/submitFeedback', {
           method: 'POST',
           body: JSON.stringify({ userId, feedback }),
           headers: {
