--- a/public/feedback.html
+++ b/public/feedback.html
@@ -78,9 +78,27 @@
   <script>
     document.getElementById('feedback-form').addEventListener('submit', async function(event) {
       event.preventDefault();
-      
       const userId = localStorage.getItem('userId'); // Assuming userId is stored in localStorage
+      console.log(`Retrieved userId: ${userId}`);
       const feedback = document.getElementById('feedback').value;
+
+      if (userId) {
+        // Fetch username data from the server
+        fetch(`/.netlify/functions/username?id=${userId}`)
+        .then(response => response.json())
+        .then(data => {
+            const usernameDisplay = document.getElementById("username-display");
+            if (data.username) {
+                usernameDisplay.textContent = `Welcome, ${data.username}`;
+            } else {
+                usernameDisplay.textContent = `Error: ${data.error}`;
+            }
+          })
+          .catch(error => console.error("Error fetching username data:", error));
+        } else {
+            console.error("User ID not found in storage.");
+            // Optionally, you can redirect or show a message here
+      }
 
       if (!userId || !feedback) {
         alert('Please fill out the feedback');
