--- a/public/feedback.html
+++ b/public/feedback.html
@@ -14,6 +14,7 @@
       align-items: center;
       height: 100vh;
       margin: 0;
+      font-family: Arial, sans-serif;
     }
     .feedback-container {
       width: 80%;
@@ -81,31 +82,42 @@
   </div>
 
   <script>
-    document.getElementById('feedback-form').addEventListener('submit', async function(event) {
-      event.preventDefault();
+    document.addEventListener('DOMContentLoaded', function() {
       const userId = localStorage.getItem('userId'); // Assuming userId is stored in localStorage
-      const feedback = document.getElementById('feedback').value;
+      console.log(`Retrieved userId: ${userId}`);
 
       if (userId) {
         // Fetch username data from the server
         fetch(`/.netlify/functions/username?id=${userId}`)
-        .then(response => response.json())
+        .then(response => {
+          if (!response.ok) {
+            throw new Error(`HTTP error! status: ${response.status}`);
+          }
+          return response.json();
+        })
         .then(data => {
-            const usernameDisplay = document.getElementById("username-display");
-            if (data.username) {
-                usernameDisplay.textContent = `Welcome, ${data.username}`;
-            } else {
-                usernameDisplay.textContent = `Error: ${data.error}`;
-            }
-          })
-          .catch(error => {
-            document.getElementById("username-display").textContent = `Error fetching username data.`;
-            console.error("Error fetching username data:", error);
-          });
+          const usernameDisplay = document.getElementById("username-display");
+          if (data.username) {
+            usernameDisplay.textContent = `Welcome, ${data.username}`;
+          } else {
+            usernameDisplay.textContent = `Error: ${data.error}`;
+          }
+        })
+        .catch(error => {
+          document.getElementById("username-display").textContent = `Error fetching username data.`;
+          console.error("Error fetching username data:", error);
+        });
       } else {
-          console.error("User ID not found in storage.");
-          // Optionally, you can redirect or show a message here
+        console.error("User ID not found in storage.");
+        document.getElementById("username-display").textContent = `User ID not found.`;
+        // Optionally, you can redirect or show a message here
       }
+    });
+
+    document.getElementById('feedback-form').addEventListener('submit', async function(event) {
+      event.preventDefault();
+      const userId = localStorage.getItem('userId'); // Assuming userId is stored in localStorage
+      const feedback = document.getElementById('feedback').value;
 
       if (!userId || !feedback) {
         alert('Please fill out the feedback');
