--- a/public/leaderboard.html
+++ b/public/leaderboard.html
@@ -11,11 +11,11 @@
       .container {
          justify-content: space-between;
          width: 90%;
-         height: 90%;
+         height: auto;
          border-radius: 10px;
-         box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Darker box shadow */
+         box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
          padding: 20px;
-         margin-top: -100px;
+         margin-top: 30px; /* Increased margin to give space for header */
       }
       .home-button-leaderboard {
          padding: 15px 30px;
@@ -43,6 +43,7 @@
          justify-content: center;
          align-items: flex-end;
          margin-bottom: 50px;
+         margin-top: 20px; /* Added margin to space the podium from the header */
       }
       .podium div {
          text-align: center;
@@ -95,7 +96,7 @@
       .leaderboard-h1 {
          text-align: center;
          margin-bottom: 30px;
-         margin-top: 30px;
+         margin-top: 30px; /* Ensures the header has enough space */
       }
    </style>
 </head>
